--- a/templates/comlicensebar.html
+++ b/templates/comlicensebar.html
@@ -37,7 +37,7 @@
             </h6>
               </li>
               <li class="nav-item">
-                <a data-chart-id="/metadata/piechart" class="nav-link" href="{{url_for('index')}}">
+                <a data-chart-id="/metadata/piechart" class="nav-link" href="{{url_for('pie_chart')}}">
                   Yearly Stats - Pie
                 </a>
               </li>
@@ -100,12 +100,12 @@
         </nav>
         <main role="main" class="col-md-9 ml-sm-auto col-lg-10 pt-3 px-4">
           <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pb-2 mb-3 border-bottom">
-            <h1 class="h2">2016 Traffic Violations Statistics: Alcohol vs Date of Violation </h1>
+            <h1 class="h2">Commercial License Violations </h1>
             <div class="btn-toolbar mb-2 mb-md-0">
             </div>
           </div>
           <div id="pie"></div>
-          <h2>Section title</h2>
+          <h2></h2>
           <div class="table-responsive">
           <div id="mytable"></div>
             <table class="table table-striped table-sm" id="excelDataTable">
