--- a/templates/fatalchart.html
+++ b/templates/fatalchart.html
@@ -37,7 +37,7 @@
             </h6>
               </li>
               <li class="nav-item">
-                <a data-chart-id="/metadata/piechart" class="nav-link" href="{{url_for('index')}}">
+                <a data-chart-id="/metadata/piechart" class="nav-link" href="{{url_for('pie_chart')}}">
                   Yearly Stats - Pie
                 </a>
               </li>
@@ -105,7 +105,7 @@
             </div>
           </div>
           <div id="bar"></div>
-          <h2>Section title</h2>
+          <h2></h2>
           <div class="table-responsive">
           <div id="mytable"></div>
             <table class="table table-striped table-sm" id="excelDataTable">
