--- a/templates/pie_chart.html
+++ b/templates/pie_chart.html
@@ -7,10 +7,8 @@
     <meta name="author" content="">
 
     <title>ORYM's Project 3 - Traffic Violations</title>
-
     <!-- Bootstrap core CSS -->
     <link href="static/css/bootstrap.min.css" rel="stylesheet">
-
     <!-- Custom styles for this template -->
     <link href="static/css/dashboard.css" rel="stylesheet">
     <link href="static/css/table.css" rel="stylesheet">
@@ -37,7 +35,7 @@
             </h6>
               </li>
               <li class="nav-item">
-                <a data-chart-id="/metadata/piechart" class="nav-link active" href="{{url_for('index')}}">
+                <a data-chart-id="/metadata/piechart" class="nav-link active" href="{{url_for('pie_chart')}}">
                   Yearly Stats - Pie
                 </a>
               </li>
@@ -57,8 +55,53 @@
                 </a>
               </li>
             </ul>
-          
             <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted">
+              <span>Data Filters by Month</span>
+              <a class="d-flex align-items-center text-muted" href="#">
+                <span data-feather="plus-circle"></span>
+              </a>
+            </h6>
+            <ul class="nav flex-column mb-2">
+            <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1">
+              <span>Violations 2016</span>
+              <a class="d-flex align-items-center active" href="#">
+                <span data-feather="plus-circle"></span>
+              </a>
+            </h6>
+              <li class="nav-item">
+                <a class="nav-link active" href="#">
+                  <select id="selDataset" onchange="getData(this.value)">
+		              <option value="metadata/barchart/01">January-2016</option>
+		              <option value="metadata/barchart/02">February-2016 </option>
+		              <option value="metadata/barchart/03">March-2016 </option>
+		              <option value="metadata/barchart/04">April-2016 </option>
+		              <option value="metadata/barchart/05">May-2016 </option>
+		              <option value="metadata/barchart/06">June-2016 </option>
+		              <option value="metadata/barchart/07">July-2016 </option>
+		              <option value="metadata/barchart/08">August-2016 </option>
+		              <option value="metadata/barchart/09">September-2016 </option>
+		              <option value="metadata/barchart/10">October-2016 </option>
+		              <option value="metadata/barchart/11">November-2016 </option>
+		              <option value="metadata/barchart/12">December-2016 </option>
+                  </select>
+                </a>
+              </li>
+              </ul>
+            <ul class="nav flex-column" id="charts">
+              <li class="nav-item">
+              <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted">
+              <span>Geo Mapping</span>
+              <a class="d-flex align-items-center text-muted" href="#">
+                <span data-feather="plus-circle"></span>
+              </a>
+            </h6>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" data-chart-id="/leaflet" href="{{url_for('leaflet')}}">
+                  Leaflet Mapping
+                </a>
+              </li>
+            </ul>            <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted">
               <span>Data Comparison</span>
               <a class="d-flex align-items-center text-muted" href="#">
                 <span data-feather="plus-circle"></span>
@@ -71,7 +114,7 @@
                 </a>
               </li>
               <li class="nav-item">
-                <a data-chart-id="/property" class="nav-link active" href="{{url_for('propertychart')}}">
+                <a data-chart-id="/property" class="nav-link" href="{{url_for('propertychart')}}">
                   Property Damage Violations
                 </a>
               </li>
@@ -105,16 +148,20 @@
             </div>
           </div>
           <div id="newpiechart"></div>
-          <h2>Section title</h2>
+          <div id="bar"></div>
+          <h2>Data</h2>
           <div class="table-responsive">
           <div id="mytable"></div>
             <table class="table table-striped table-sm" id="excelDataTable">
+              {% for table in tables %}
+                  {{ table|safe }}
+              {% endfor %}
             </table>
           </div>
         </main>
       </div>
     </div>
-
+    <script src="{{ url_for('static', filename='js/montlyfilter.js') }}"></script>
     <script src="{{ url_for('static', filename='js/piechart.js') }}"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
