--- a/templates/propertychart.html
+++ b/templates/propertychart.html
@@ -16,6 +16,28 @@
     <link href="static/css/table.css" rel="stylesheet">
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
     <script src="https://d3js.org/d3.v5.min.js"></script>
+
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.3/dist/leaflet.css"
+    integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ=="
+    crossorigin=""/>
+    <script src="https://unpkg.com/leaflet@1.3.3/dist/leaflet.js"
+    integrity="sha512-tAGcCfR4Sc5ZP5ZoVz0quoZDYX5aCtEm/eu1KhSLj2c9eFrylXZknQYmxUssFaVJKvvc0dJQixhGjG2yXWiV9Q=="
+    crossorigin=""></script>
+
+    <link rel="stylesheet" href="../static/css/screen.css"/>
+    <link rel="stylesheet" href="../static/css/MarkerCluster.css"/>
+    <link rel="stylesheet" href="../static/css/MarkerCluster.Default.css"/>
+    <link rel="stylesheet" href="../static/css/leaflet-search.min.css"/>
+    <link rel="stylesheet" href="../static/css/L.Control.Locate.min.css"/>
+    <link rel="stylesheet" href="../static/css/styles.css"/>
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css" rel="stylesheet">
+
+    <script src="../static/js/leaflet.markercluster.js"></script>
+    <script src="../static/js/leaflet-search.min.js"></script>
+    <script src="../static/js/leaflet.smoothmarkerbouncing.js"></script>
+    <script src="../static/js/L.Control.Locate.min.js"></script>
+    <script src="../static/js/Control.FullScreen.js"></script>
+    <script src="../static/js/jquery.min.js"></script>
   </head>
 
 
@@ -37,7 +59,7 @@
             </h6>
               </li>
               <li class="nav-item">
-                <a data-chart-id="/metadata/piechart" class="nav-link" href="{{url_for('index')}}">
+                <a data-chart-id="/metadata/piechart" class="nav-link" href="{{url_for('pie_chart')}}">
                   Yearly Stats - Pie
                 </a>
               </li>
@@ -100,12 +122,13 @@
         </nav>
         <main role="main" class="col-md-9 ml-sm-auto col-lg-10 pt-3 px-4">
           <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pb-2 mb-3 border-bottom">
-            <h1 class="h2">2016 Traffic Violations Statistics: Property Damage vs Date of Violation </h1>
+            <h1 class="h2">Monthly Property Damage Traffic Violations</h1>
             <div class="btn-toolbar mb-2 mb-md-0">
             </div>
           </div>
           <div id="bar"></div>
-          <h2>Section title</h2>
+          <div id="map" style='height:600px'></div>
+          <h2></h2>
           <div class="table-responsive">
           <div id="mytable"></div>
             <table class="table table-striped table-sm" id="excelDataTable">
@@ -119,8 +142,10 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script>window.jQuery || document.write('<script src="static/js/jquery-slim.min.js"><\/script>')</script>
+    <script src="https://code.jquery.com/jquery-3.1.1.min.js">
     <script src="{{ url_for('static', filename='js/popper.min.js') }}"></script>
     <script src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
+    <script type="text/javascript" src="../static/js/app_leaflet.js"></script>
 
 </body>
 </html>
