Updated app, js, and html files. Removed unused files. Added csv files and db sql file.

--- a/templates/ppeinjurychart.html
+++ b/templates/ppeinjurychart.html
@@ -130,9 +130,10 @@
           <div id="map" style='height:600px'></div>
           <h2></h2>
           <div class="table-responsive">
-          <div id="mytable"></div>
-            <table class="table table-striped table-sm" id="excelDataTable">
-            </table>
+			<div id="mytable">
+				<table class="table table-striped table-sm" id="excelDataTable">
+				</table>
+			</div>
           </div>
         </main>
       </div>
