--- a/templates/alcoholchart.html
+++ b/templates/alcoholchart.html
@@ -131,12 +131,13 @@
 
           <h2></h2>
           <div class="table-responsive">
-          <div id="mytable"></div>
-            <table class="table table-striped table-sm" id="excelDataTable">
+			<div id="mytable">
+
               {% for table in tables %}
                   {{ table|safe }}
               {% endfor %}
-            </table>
+
+			</div>
           </div>
         </main>
       </div>
