--- a/templates/comlicensebar.html
+++ b/templates/comlicensebar.html
@@ -107,9 +107,10 @@
           <div id="pie"></div>
           <h2></h2>
           <div class="table-responsive">
-          <div id="mytable"></div>
-            <table class="table table-striped table-sm" id="excelDataTable">
-            </table>
+			<div id="mytable">
+				<table class="table table-striped table-sm" id="excelDataTable">
+				</table>
+			</div>
           </div>
         </main>
       </div>
