--- a/templates/fatalchart.html
+++ b/templates/fatalchart.html
@@ -107,9 +107,10 @@
           <div id="bar"></div>
           <h2></h2>
           <div class="table-responsive">
-          <div id="mytable"></div>
+          <div id="mytable">
             <table class="table table-striped table-sm" id="excelDataTable">
             </table>
+			</div>
           </div>
         </main>
       </div>
