--- a/templates/index.html
+++ b/templates/index.html
@@ -165,9 +165,10 @@
           </p>
           <footer class="blockquote-footer">Copy from NHTSA's National Center for Statistics and Analysis <cite title="Source Title">Traffic Safety Facts 2016 Data</cite></footer>
           </div>
-          <div id="mytable"></div>
-            <table class="table table-striped table-sm" id="excelDataTable">
+		  <div id="mytable">
+			<table class="table table-striped table-sm" id="excelDataTable">
             </table>
+		  </div>
           </div>
         </main>
       </div>
