--- a/templates/pie_chart.html
+++ b/templates/pie_chart.html
@@ -151,12 +151,13 @@
           <div id="bar"></div>
           <h2>Data</h2>
           <div class="table-responsive">
-          <div id="mytable"></div>
-            <table class="table table-striped table-sm" id="excelDataTable">
+			<div id="mytable">
+
               {% for table in tables %}
                   {{ table|safe }}
               {% endfor %}
-            </table>
+
+			</div>
           </div>
         </main>
       </div>
