--- a/templates/scatter.html
+++ b/templates/scatter.html
@@ -152,12 +152,13 @@
           <div id="scatter"></div>
           <h2>Data</h2>
           <div class="table-responsive">
-          <div id="mytable"></div>
-            <table class="table table-striped table-sm" id="excelDataTable">
+			<div id="mytable">
+            
               {% for table in tables %}
                   {{ table|safe }}
               {% endfor %}
-            </table>
+            
+			</div>
           </div>
         </main>
       </div>
